Sending Data Via Intent and putExtra

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="ex_nicolas">Ex.: Nicolas</string>
     <string name="start">START</string>
     <string name="quiz_image">Quiz Image</string>
+    <string name="result">Result</string>
+    <string name="hey_congratulations">Hey, Congratulations</string>
+    <string name="image">Image</string>
+    <string name="finish">FINISH</string>
 </resources>
